--- a/css/main.css
+++ b/css/main.css
@@ -168,13 +168,21 @@ h3 {
     display: none;
   }
 
+  #section{
+    width: 200px;
+  }
+
   #text {
-    max-width: 450px;
+    max-width: 400px;
   }
 }
 
 @media only screen and (min-device-width: 481px)  and (max-device-width: 650px) {
   #photo {
     display: none;
+  }
+
+  #section{
+    width: 400px;
   }
 }
