updated minor aesthetics

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ h3 {
 
 #title {
   font-size: 35px;
-  font-family: Poppins;
+  font-family: Quicksand;
   margin-left: 15px;
   padding-right: 10px;
   color: #a77dc2;
