--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,6 @@ body {
   display: -ms-flexbox;      /* TWEENER - IE 10 */
   display: -webkit-flex;     /* NEW - Chrome */
   display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
-  display: inline-block;
 }
 
 a:hover {
@@ -115,7 +114,7 @@ h1 {
   font-weight: 100;
   margin: 0px;
   text-align: right;
-  width: 380px;
+  max-width: 380px;
 }
 
 h2 {
@@ -127,12 +126,12 @@ h2 {
   font-weight: 100;
   margin: 0px;
   padding: 5px 5px;
-  width: 380px;
+  max-width: 380px;
   text-align: right;
 }
 
 #text {
-  width: 380px;
+  max-width: 380px;
   font-size: 15px;
   text-align: left;
   font-family: Abel;
@@ -140,6 +139,7 @@ h2 {
   letter-spacing: 0.4px;
   padding: 0px;
 }
+
 
 #contact{
   font-family: 'Quicksand', sans-serif;
@@ -184,12 +184,12 @@ h2 {
     display: none;
   }
 
-  #section{
-    width: 200px;
+  h2{
+    max-width: 350px;
   }
 
   #text {
-    max-width: 400px;
+    max-width: 350px;
   }
 }
 
@@ -197,8 +197,11 @@ h2 {
   #photo {
     display: none;
   }
+  h2{
+    max-width: 350px;
+  }
 
-  #section{
-    width: 400px;
+  #text {
+    max-width: 350px;
   }
 }
